--- a/QRCoder/QRCoder.csproj
+++ b/QRCoder/QRCoder.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net35;net40;netstandard1.3;netstandard2.0;net5.0;net5.0-windows;net6.0;net6.0-windows</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net5.0;net5.0-windows;net6.0;net6.0-windows</TargetFrameworks>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <DefineConstants Condition="'$(TargetFramework)' == 'net5.0-windows'">$(DefineConstants);NET5_0_WINDOWS</DefineConstants>
 	  <DefineConstants Condition="'$(TargetFramework)' == 'net6.0-windows'">$(DefineConstants);NET6_0_WINDOWS</DefineConstants>
@@ -44,12 +44,51 @@
   <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.3' or '$(TargetFramework)' == 'netstandard2.0' ">
     <PackageReference Include="System.Text.Encoding.CodePages" Version="5.0.0" />
   </ItemGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' or '$(TargetFramework)' == 'net5.0' or '$(TargetFramework)' == 'net5.0-windows' ">
-    <PackageReference Include="System.Drawing.Common" Version="5.0.3" />
-  </ItemGroup>
 	<ItemGroup Condition=" '$(TargetFramework)' == 'net6.0-windows' ">
 		<PackageReference Include="System.Drawing.Common" Version="6.0.0" />
+	</ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+	  <PackageReference Include="IronSoftware.System.Drawing">
+	    <Version>2022.11.10457</Version>
+	  </PackageReference>
+	  <PackageReference Include="SixLabors.ImageSharp">
+	    <Version>2.1.3</Version>
+	  </PackageReference>
+	</ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net5.0'">
+	  <PackageReference Include="IronSoftware.System.Drawing">
+	    <Version>2022.11.10457</Version>
+	  </PackageReference>
+	  <PackageReference Include="SixLabors.ImageSharp">
+	    <Version>2.1.3</Version>
+	  </PackageReference>
+	</ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net5.0-windows'">
+	  <PackageReference Include="IronSoftware.System.Drawing">
+	    <Version>2022.11.10457</Version>
+	  </PackageReference>
+	  <PackageReference Include="SixLabors.ImageSharp">
+	    <Version>2.1.3</Version>
+	  </PackageReference>
+	</ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
+	  <PackageReference Include="IronSoftware.System.Drawing">
+	    <Version>2022.11.10457</Version>
+	  </PackageReference>
+	  <PackageReference Include="SixLabors.ImageSharp">
+	    <Version>2.1.3</Version>
+	  </PackageReference>
+	</ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net6.0-windows'">
+	  <PackageReference Include="IronSoftware.System.Drawing">
+	    <Version>2022.11.10457</Version>
+	  </PackageReference>
+	  <PackageReference Include="SixLabors.ImageSharp">
+	    <Version>2.1.3</Version>
+	  </PackageReference>
+	</ItemGroup>
+	<ItemGroup>
+	  <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="1.0.0-beta15" />
 	</ItemGroup>
 
   <PropertyGroup>
